Publish agent status events at server side
